sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:11: error: ';' expected but 'else' found.
    else (k=1)
    ^AlgCocktailSort1:17: error: ';' expected but 'else' found.
      else (k=1)
      ^